<resources>
    <string name="app_name">binder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="binder">Binder</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_acc">Do not have an account?</string>
    <string name="sign_up_here">Sign up here.</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>